Removed diagonals on small screens Fixes #8

--- a/css/main.scss
+++ b/css/main.scss
@@ -325,7 +325,10 @@ nav {
   }
   .timeline {
     .day {
-      &::after {
+      padding: 20px 10px;
+
+      &::after,
+      &::before {
         display: none!important;
       }
     }
